Fixed navbar layout and login page styling

--- a/index.html
+++ b/index.html
@@ -3,41 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+    <title>FoodLover</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<nav class="navbar navbar-expand-lgbg-light px-4">
-    <a class="navbar-brand" href="#">
-        <img src="images/logo.jpg" alt="Logo" class="icon" style="height: 60px;">
-    </a>
-    <ul class="nav justify-content-end">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Sign in</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-        </li>
-    </ul>
 
-</nav>
+<body class="fl-page">
 
-<body>
-    <img src="images/main img.jpg" class="main-image">
+    <!-- NAVBAR -->
+    <header class="fl-header">
+    <div class="fl-logo">FoodLover</div>
+    <nav class="fl-nav">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Menu</a>
+        <a href="#">Reviews</a>
+        <a href="signin.html">Sign in</a>
+    </nav>
+</header>
+
+    <!-- HERO SECTION -->
+    <section class="fl-hero">
+        <div class="fl-hero-text">
+            <h1>It's Not Just Food,<br>It's an Experience</h1>
+
+            <button class="fl-btn">Explore Menu</button>
+        </div>
+
+        <div class="fl-hero-image">
+            <div class="fl-circle"></div>
+            <img src="images/main img.jpg" alt="Food">
+
+        </div>
+    </section>
 
 </body>
 
