--- a/signin.html
+++ b/signin.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+
+<body class="login-page">
+    <div class="container">
+        <div class="login-box">
+            <h2>LOGIN PAGE</h2>
+
+            <div class="input-box">
+                <label>Username</label>
+                <input type="text" placeholder="Enter your Username">
+            </div>
+
+            <div class="input-box">
+                <label>Password</label>
+                <input type="password" placeholder="Enter your password">
+            </div>
+
+            <div class="options">
+                <label><input type="checkbox"> Remember me</label>
+                <a href="#">Forgot Password?</a>
+            </div>
+
+            <button>Login</button>
+        </div>
+    </div>
+
 </body>
+
 </html>
